--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-countdown-circle-timer": "^3.1.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.6.1",
+    "react-snow-effect": "^1.2.0",
+    "xmas-tree": "^1.0.3"
   }
 }
