--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
@@ -16,8 +19,8 @@
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.1.0",
     "react-dom": "18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.6.1",
-    "react-snow-effect": "^1.2.0",
-    "xmas-tree": "^1.0.3"
+    "react-snowfall": "^1.2.1"
   }
 }
