commit for build

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "gift-counter",
   "version": "0.1.0",
+  "homepage": "https://shakilo.github.io/xmas-counter-v1",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predeploy": "npm run build export",
+    "deploy": "gh-pages -d out",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "export": "next export",
+    "start": "next start"
+    
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -18,6 +22,7 @@
     "@next/font": "13.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "gh-pages": "^4.0.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.1.0",
